--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.77.0",
     "@react-three/fiber": "^8.13.3",
+    "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
     "maath": "^0.6.0",
     "react": "^18.2.0",
@@ -21,7 +22,8 @@
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.153.0"
+    "three": "^0.153.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
